Fixed bug #36756 (DOMDocument::removeChild corrupts node) add test

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_1@209602 c90b9560-bf6c-de11-be94-00142212c4b1